--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "~3.3.3333"
   },
   "dependencies": {
+    "caporal": "^1.2.0",
     "commander": "^2.19.0",
     "ejs": "^2.6.1",
     "js-yaml": "^3.12.2",
